Replace contact with blog

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 href="#">home</a>
 
                 <a class="hover:text-[#f38ba8] hover:scale-125 duration-500" 
-                href="contact.html">contact</a>
+                href="https://blog.zirc.lol/">blog</a>
 
                 <a class="hover:text-[#f38ba8] hover:scale-125 duration-500" 
-                href="https://github.com/lolzthedev">github</a>
+                href="https://github.com/lolzthedev/">github</a>
             </div>
         </div>
 
@@ -82,7 +82,7 @@
             <div class="px-4 text-sm pb-4">
                 feel free to 
                 <a class="text-[#a6adc8] hover:text-[#f38ba8] duration-500" 
-                href="contact.html">
+                href="mailto:contact@zirc.lol">
                     contact me
                 </a> 
                 if you need to (i usually don't bite)
