fix contact info
thanks @errplane

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 i code/program various things in my freetime when i feel like it.
                 at the moment, my favorite project is py-blog, a blog made with python 
                 and flask. i have basic node.js and vue.js experience. contact me
-                @zirconium.zr if you're willing to chat or work with me!
+                @zirc.lol on Discord if you're willing to chat or work with me!
             </div>
 
             <br />
